# Promotly-backend

./: .env.example  .replit  BROWSER_AUTOMATION_README.md  BROWSER_SESSION_INTEGRATION.md  BROWSER_SESSION_SETUP.md  DB_CONNECTION_FIX.md  DEPLOYMENT.md  EXTERNAL_DATABASE.md  MANUAL_SUPABASE_SETUP.md  README.md  SUPABASE_SETUP.md  browser_client_example.py  browser_session_service.py  cookies.txt  demo.js  index.js  package-lock.json  package.json  pyproject.toml  replit.md  requirements-browser-service.txt  scalingo.json  sessionManager.js  session_encryption.key  supabase-tables.sql  test.js
attached_assets/: content-1751066199633.md  content-1751538355761.md
client/: index.html
client/src/: App.tsx  index.css  main.tsx
client/src/components/: analytics-chart.tsx  platform-selector.tsx  post-form.tsx  post-list.tsx
client/src/hooks/: use-auth.tsx  use-notifications.ts  use-session.ts
client/src/lib/: auth.ts  queryClient.ts
client/src/pages/: analytics.tsx  auth-old.tsx  auth.tsx  dashboard.tsx  posts.tsx  recommendations.tsx  schedule-post.tsx  signin.tsx  signup.tsx  (+2 more)
migrations/: 0000_absurd_doctor_strange.sql
migrations/meta/: 0000_snapshot.json  _journal.json
server/: auth.ts  db.ts  index.ts  routes.ts  storage.ts
server/middleware/: clerk-auth.ts  jwt-auth.ts
server/services/: ai-recommendations.ts  browser-automation.ts  browser-session-client.ts  browser-session.ts  cookie-extractor.ts  mock-browser-session.ts  playwright-automation.ts  playwright-social.ts  scheduler.ts  session-manager.ts  social-media.ts
shared/: schema.ts
(+5 files in other folders)
